# stock_math_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  stock_math_api.postman_collection.json
databases/: init.sh  init.sql
debian/: Dockerfile
src/: anonymize_emails.rs  app_error.rs  basket.rs  bfs_alg.rs  distance_matrix_calculate.rs  local_main.rs  logging.rs  main.rs  naive_solution_min_path.rs  transform_route.rs
src/branch_and_bound/: mod.rs
src/config/: application.rs  logging.rs  mod.rs  postgresql.rs  test_envs.rs
src/db/: alembic_version.rs  alembic_version_db_set.rs  allergies_mappings.rs  allergies_mappings_db_set.rs  athena_medications.rs  athena_medications_db_set.rs  diagnosis_mappings.rs  diagnosis_mappings_db_set.rs  diagnostic_reports_mappings.rs  diagnostic_reports_mappings_db_set.rs  facility_mappings.rs  facility_mappings_db_set.rs  facility_onboardings.rs  facility_onboardings_db_set.rs  medical_events.rs  medical_events_db_set.rs  medication_mappings.rs  medication_mappings_db_set.rs  medications_ids_rxnorm_mappings.rs  medications_ids_rxnorm_mappings_db_set.rs  medications_no_mapped.rs  medications_no_mapped_db_set.rs  mod.rs  patient_mappings.rs  patient_mappings_db_set.rs  pcc_lab_result_webhooks.rs  pcc_lab_result_webhooks_db_set.rs  pcc_medications_no_mapped.rs  pcc_medications_no_mapped_db_set.rs  pcc_panel_name_to_athena_document_type.rs  pcc_panel_name_to_athena_document_type_db_set.rs  pcc_patient_status_history.rs  pcc_patient_status_history_db_set.rs  practitioners.rs  practitioners_db_set.rs  progress_notes_from_pcc_to_athena.rs  (+5 more)
src/middleware/: cors.rs  (+2 more)
ui-admin/: Travelling Salesman Greedy Approach.html  index.html  markdown_dark_autotype.html  markdown_light_autotype.html  min_path.html  min_path1.html  stock-example-v1.json  stock-example.json  stock_geometry-v2.json  stock_geometry-v2_old.json  stock_geometry.json  traveling-salesman-problem.html  traveling-salesman-problem_51point.html  variants.txt
(+35 files in other folders)
