[package]
name = "stock_math_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.13.5"
actix-cors = "0.7"
actix-files = "0.6.6"
actix-web = { version = "4.9", features = ["rustls"] }
actix-web-httpauth = "0.8"
actix-rt = "2.10"
actix_derive = "0.6.2"

# json serializer/deserializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging / tracing
tracing = "0.1"
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
# tracing-json2 = { git = "https://github.com/sre-university/tracing-json2.git", branch = "show_file", package = "tracing-json", features = [
#   "derive",
# ] }
tracing-json2 = { git = "https://github.com/sre-university/tracing-json2.git", package = "tracing-json", features = [
  "derive",
] }

url = "2.4"
dotenvy = "0.15"
envy = "0.4"

# ctor
ctor = "0.2.8"


metaheuristics = "1.1.22"
time = "0.3.36"
rand = "0.8.5"
